Multi Protocol Label Switching (MPLS) dissector

--- a/config/xplico_canone.cfg
+++ b/config/xplico_canone.cfg
@@ -19,6 +19,7 @@ MODULES_DIR=modules
 MODULE=dis_pcapf.so      LOG=FEWIS
 MODULE=dis_pol.so        LOG=FEWIS
 MODULE=dis_eth.so        LOG=FEWIS
+MODULE=dis_mpls.so       LOG=FEWIS
 MODULE=dis_pppoe.so      LOG=FEWIS
 MODULE=dis_ppp.so        LOG=FEWIS
 MODULE=dis_null.so       LOG=FEWIS
@@ -35,10 +36,10 @@ MODULE=dis_llc.so        LOG=FEWIS
 MODULE=dis_ppi.so        LOG=FEWIS
 MODULE=dis_prism.so      LOG=FEWIS
 MODULE=dis_dns_ca.so     LOG=FEWIS
-MODULE=dis_tcp_ca.so     LOG=FEWIDS
-MODULE=dis_udp_ca.so     LOG=FEWIS
-MODULE=dis_ipsec_ca.so   LOG=FEWIS
-MODULE=dis_wa_ca.so      LOG=FEWIS
+MODULE=dis_tcp_ca.so     LOG=FEW
+MODULE=dis_udp_ca.so     LOG=FEW
+MODULE=dis_ipsec_ca.so   LOG=FEW
+MODULE=dis_wa_ca.so      LOG=FEW
 
 #---------- Dispach module
 #------ Module name
@@ -57,10 +58,10 @@ FLOW_SILENCE_TIMEOUT=10
 
 #---------- Log mask
 #---- capture mask
-CAPTURE_LOG=FEWITDS
+CAPTURE_LOG=FEWS
 
 #---- core mask
-CORE_LOG=FEWITDS
+CORE_LOG=FEWS
 
 #---- log name base
 LOG_BASE_NAME=xplico
@@ -70,7 +71,7 @@ GEOIP_IPV4_DB_FILE=/opt/evolka-prj/prj/li/GeoIP.dat
 GEOIP_IPV6_DB_FILE=/opt/evolka-prj/prj/li/GeoIPv6.dat
 
 #--------- Module params
-CAPANA_PARALLEL=250
+CAPANA_PARALLEL=20
 
 #--------- Manipula connection
 # connect to manipulator:
