--- a/config/xplico_cli_nc.cfg
+++ b/config/xplico_cli_nc.cfg
@@ -19,6 +19,7 @@ MODULES_DIR=modules
 MODULE=dis_pcapf.so      LOG=FEWS
 MODULE=dis_pol.so        LOG=FEWS
 MODULE=dis_eth.so        LOG=FEWS
+MODULE=dis_mpls.so       LOG=FEWIS
 MODULE=dis_pppoe.so      LOG=FEWITDS
 MODULE=dis_ppp.so        LOG=FEWITDS
 MODULE=dis_ip_nocheck.so         LOG=FEWS
