--- a/config/xplico_install_lite.cfg
+++ b/config/xplico_install_lite.cfg
@@ -19,6 +19,7 @@ MODULES_DIR=/opt/xplico/bin/modules
 MODULE=dis_pcapf.so      LOG=FEWS
 MODULE=dis_pol.so        LOG=FEWS
 MODULE=dis_eth.so        LOG=FEWS
+MODULE=dis_mpls.so       LOG=FEWIS
 MODULE=dis_pppoe.so      LOG=FEWITDS
 MODULE=dis_ppp.so        LOG=FEWITDS
 MODULE=dis_ip.so         LOG=FEWS
