GTP dissector added

--- a/config/xplico_cli.cfg
+++ b/config/xplico_cli.cfg
@@ -38,7 +38,7 @@ MODULE=dis_rtcp.so       LOG=FEWITDS
 MODULE=dis_sdp.so        LOG=FEWITDS
 MODULE=dis_l2tp.so       LOG=FEWITDS
 MODULE=dis_vlan.so       LOG=FEWITDS
-MODULE=dis_ftp.so        LOG=FEWITDS
+MODULE=dis_ftp.so        LOG=FEWS
 MODULE=dis_dns.so        LOG=FEWS
 MODULE=dis_icmp.so       LOG=FEWITDS
 MODULE=dis_nntp.so       LOG=FEWITDS
@@ -64,7 +64,7 @@ MODULE=dis_syslog.so     LOG=FEWITDS
 MODULE=dis_mgcp.so       LOG=FEWITDS
 MODULE=dis_chdlc.so      LOG=FEWITDS
 #MODULE=dis_nbss.so       LOG=FEWITDS
-#MODULE=dis_gtp.so        LOG=FEWITDS
+MODULE=dis_gtp.so        LOG=FEWITDS
 MODULE=dis_prism.so      LOG=FEWITDS
 #MODULE=dis_ssl.so        LOG=FEWDS
 MODULE=dis_null.so       LOG=FEWS
