--- a/config/xplico_cli_nc.cfg
+++ b/config/xplico_cli_nc.cfg
@@ -64,7 +64,7 @@ MODULE=dis_syslog.so     LOG=FEWITDS
 MODULE=dis_mgcp.so       LOG=FEWITDS
 MODULE=dis_chdlc.so      LOG=FEWITDS
 #MODULE=dis_nbss.so       LOG=FEWITDS
-#MODULE=dis_gtp.so        LOG=FEWITDS
+MODULE=dis_gtp.so        LOG=FEWITDS
 MODULE=dis_prism.so      LOG=FEWITDS
 #MODULE=dis_ssl.so        LOG=FEWDS
 MODULE=dis_null.so       LOG=FEWS
