--- a/config/xplico_cli.cfg
+++ b/config/xplico_cli.cfg
@@ -92,6 +92,8 @@ DISPATCH_PARALLEL=1
 DISPATCH_CLI_DECODE_DIR=xdecode
 
 #---------- GeoMap Private net location
+GEOIP_IPV4_DB_FILE=/usr/share/GeoIP/GeoLiteCity.dat
+GEOIP_IPV6_DB_FILE=/usr/share/GeoIP/GeoLiteCityv6.dat
 DISPATCH_GEPMAP_LAT=45.4339
 DISPATCH_GEPMAP_LONG=12.3343
 
