--- a/config/xplico_install_lite.cfg
+++ b/config/xplico_install_lite.cfg
@@ -83,6 +83,8 @@ DISPATCH=disp_lite.so LOG=FEWITS
 DISPATCH_PARALLEL=1
 
 #---------- GeoMap Private net location
+GEOIP_IPV4_DB_FILE=/usr/share/GeoIP/GeoLiteCity.dat
+GEOIP_IPV6_DB_FILE=/usr/share/GeoIP/GeoLiteCityv6.dat
 DISPATCH_GEPMAP_LAT=45.4339
 DISPATCH_GEPMAP_LONG=12.3343
 
