--- a/config/xplico_cli.cfg
+++ b/config/xplico_cli.cfg
@@ -20,6 +20,7 @@ MODULE=dis_pcapf.so      LOG=FEWS
 MODULE=dis_pol.so        LOG=FEWS
 MODULE=dis_eth.so        LOG=FEWS
 MODULE=dis_mpls.so       LOG=FEWIS
+MODULE=dis_gre.so        LOG=FEWIS
 MODULE=dis_pppoe.so      LOG=FEWITDS
 MODULE=dis_ppp.so        LOG=FEWITDS
 MODULE=dis_ip.so         LOG=FEWS
