libndpi dynamic cflags for tcp and udp grbg

--- a/dissectors/udp_grbg/Makefile
+++ b/dissectors/udp_grbg/Makefile
@@ -36,10 +36,10 @@ SUBDIRS =
 SRC = dis_log.c udp_garbage.c
 
 # C flags specific to the dissector
-CFLAGS += -I$(ROOT_DIR)/../nDPI/src/include -I$(ROOT_DIR)/../nDPI/src/lib
+CFLAGS += $(shell pkg-config --cflags libndpi) -O2
 
 # library specific to the dissector
-LDFLAGS = $(ROOT_DIR)/../nDPI/src/lib/.libs/libndpi.a
+LDFLAGS = $(shell pkg-config --libs libndpi)
 
 # To make it visible
 export CC CCPP ROOT_DIR CFLAGS LDFLAGS INCLUDE_DIR
@@ -48,7 +48,7 @@ export CC CCPP ROOT_DIR CFLAGS LDFLAGS INCLUDE_DIR
 all: subdir $(DIS_SO)
 
 
-$(DIS_SO): $(SRC:.c=.o) $(ROOT_DIR)/../nDPI/src/lib/.libs/libndpi.a
+$(DIS_SO): $(SRC:.c=.o)
 	$(CC) $(CFLAGS) -shared -Wl,-soname,$@ -o $@ $(SRC:.c=.o) $(LDFLAGS)
 
 
