fix postgresql include

--- a/dispatch/capostgres/Makefile
+++ b/dispatch/capostgres/Makefile
@@ -22,7 +22,7 @@ SRC = capostgres.c
 
 # compilation
 CFLAGS += $(shell pkg-config --cflags libpq)
-LDFLAGS += -lpq
+LDFLAGS += $(shell pkg-config --libs libpq)
 
 # To make it visible
 export CC CCPP ROOT_DIR CFLAGS LDFLAGS INCLUDE_DIR
