bugfix libeGeoIP library enable/disable

--- a/config/xplico_canone.cfg
+++ b/config/xplico_canone.cfg
@@ -22,7 +22,11 @@ MODULE=dis_eth.so        LOG=FEWIS
 MODULE=dis_mpls.so       LOG=FEWIS
 MODULE=dis_pppoe.so      LOG=FEWIS
 MODULE=dis_ppp.so        LOG=FEWIS
+MODULE=dis_l2tp.so       LOG=FEWIS
+MODULE=dis_chdlc.so      LOG=FEWIS
 MODULE=dis_null.so       LOG=FEWIS
+MODULE=dis_gre.so        LOG=FEWIS
+MODULE=dis_radiotap.so   LOG=FE
 MODULE=dis_ip_nocheck.so LOG=FES
 MODULE=dis_ipv6.so       LOG=FEWIS
 #MODULE=dis_tcp_nocheck.so        LOG=FEWS
@@ -39,7 +43,7 @@ MODULE=dis_dns_ca.so     LOG=FEWIS
 MODULE=dis_tcp_ca.so     LOG=FEW
 MODULE=dis_udp_ca.so     LOG=FEW
 MODULE=dis_ipsec_ca.so   LOG=FEW
-MODULE=dis_wa_ca.so      LOG=FEW
+#MODULE=dis_wa_ca.so      LOG=FEW
 
 #---------- Dispach module
 #------ Module name
