--- a/manipulators/mwmail/Makefile
+++ b/manipulators/mwmail/Makefile
@@ -52,9 +52,7 @@ CFLAGS += -I./include
 PYCMPL = python3 -m compileall
 
 # verify GeoIP library source code
-ifeq ($(wildcard $(GEOIP_LIB)), $(GEOIP_LIB))
-XPL_LIB += $(GEOIP_LIB)
-endif
+LDFLAGS += $(GEOIP_LIB)
 
 # main cflags
 MCFLAGS = $(CFLAGS) -DLOG_COMPONENT=-1
