--- a/dissectors/tcp_grbg/Makefile
+++ b/dissectors/tcp_grbg/Makefile
@@ -36,10 +36,18 @@ SUBDIRS =
 SRC = dis_log.c tcp_garbage.c
 
 # C flags specific to the dissector
-CFLAGS += $(shell pkg-config --cflags libndpi) -O2
+ifdef LOCAL_NDPI
+CFLAGS += -I$(ROOT_DIR)/../nDPI/src/include -I$(ROOT_DIR)/../nDPI/src/lib
+else
+CFLAGS += $(shell pkg-config --cflags libndpi)
+endif
 
 # library specific to the dissector
+ifdef LOCAL_NDPI
+LDFLAGS = $(ROOT_DIR)/../nDPI/src/lib/.libs/libndpi.a
+else
 LDFLAGS = $(shell pkg-config --libs libndpi)
+endif
 
 # To make it visible
 export CC CCPP ROOT_DIR CFLAGS LDFLAGS INCLUDE_DIR
