--- a/system/dema/Makefile
+++ b/system/dema/Makefile
@@ -41,9 +41,8 @@ SRC = dema.c session_decoding.c dbinterface.c captime.c log.c
 INCLUDE_DIR = -I$(ROOT_DIR)/include
 LDFLAGS = -L$(ROOT_DIR) -ldl -lpthread -lpcap
 CFLAGS = -rdynamic $(INCLUDE_DIR) -Wall -g -ggdb -fPIC -D_FILE_OFFSET_BITS=64
-CFLAGS += $(shell pkg-config --cflags mysqlclient)
-
-LDFLAGS += $(shell pkg-config --libs mysqlclient)
+CFLAGS += $(shell mysql_config --cflags)
+LDFLAGS += $(shell mysql_config --libs)
 CFLAGS += -DMYSQLXON=1
 
 # performance
