replace pyc use with py

--- a/manipulators/mwmail/Makefile
+++ b/manipulators/mwmail/Makefile
@@ -93,8 +93,8 @@ clean:
 
 install:
 	cp $(MANIPULA_NAME) $(INSTALL_DIR)/bin
+	cp wbm_*.py $(INSTALL_DIR)/bin
 	cp wbm_*.pyc $(INSTALL_DIR)/bin
-
 
 mmain.o: ../core/mmain.c
 	$(CC) $(MCFLAGS) -c -o $@ $<
