Migration from GeoIP to GeoIP2

--- a/config/xplico_canone.cfg
+++ b/config/xplico_canone.cfg
@@ -65,14 +65,13 @@ FLOW_SILENCE_TIMEOUT=10
 CAPTURE_LOG=FEWS
 
 #---- core mask
-CORE_LOG=FEWS
+CORE_LOG=FEWSI
 
 #---- log name base
 LOG_BASE_NAME=xplico
 
 #--------- GeoIP databases files paths
-GEOIP_IPV4_DB_FILE=/opt/evolka-prj/prj/li/GeoIP.dat
-GEOIP_IPV6_DB_FILE=/opt/evolka-prj/prj/li/GeoIPv6.dat
+GEOIP2_DB_FILE=/tmp/GeoLite2-City.mmdb
 
 #--------- Module params
 CAPANA_PARALLEL=20
